# TransFInfer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: status_code.hpp  tensor.hpp
include/data/: load_data.hpp  tensor.hpp  tensor_util.hpp
include/runtime/: ir.h  runtime_attr.hpp  runtime_datatype.hpp  runtime_op.hpp
include/runtime1/: runtime_ir.hpp  runtime_operand.hpp  runtime_parameter.hpp
others/kuiper_project_practice/: .clang-format  CMakeLists.txt  glog_learn.cpp
others/kuiper_project_practice/include/: matrix.hpp
others/kuiper_project_practice/test/: CMakeLists.txt  test_main.cpp  test_matrix.cpp  test_single.cpp
source/: load_data.cpp  runtime_attr.cpp  runtime_op.cpp
source1/: runtime_ir.cpp  tensor.cpp  tensor_utils.cpp
test/: test1.cpp  test2.cpp  test_ir.cpp
